Revert "Revamp Home Page Template"
This reverts commit e6d35e079f01845a8be727e388e98d84975173e4.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
-  "rules": {
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  }
+  "extends": "next/core-web-vitals"
 }
